# blutv-authentication-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: blutv-authentication_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  blutv-authentication.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: blutv-authentication_sdk.go  config.go  context.go  error.go  helpers.go  operation.go  registry.go  response.go  result.go  target.go  types.go
go/entity/: login_entity.go  password_recovery_entity.go  register_entity.go  social_login_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  debug_feature.go  idempotency_feature.go  (+12 more)
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  blutv-authentication.rockspec  blutv-authentication_sdk.lua  blutv-authentication_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  blutvauthentication_sdk.php  composer.json  config.php  features.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  blutvauthentication_sdk.py  blutvauthentication_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  result.py  utility_type.py
py/entity/: login_entity.py  password_recovery_entity.py  register_entity.py  social_login_entity.py
py/feature/: cache_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  ratelimit_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_login_entity.py  test_netsim.py  test_password_recovery_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_register_entity.py  test_social_login_entity.py
py/utility/: clean.py  done.py  feature_add.py  fetcher.py  make_context.py  make_error.py  make_point.py  make_response.py  prepare_auth.py  prepare_headers.py  prepare_method.py  transform_request.py  transform_response.py
rb/: AGENTS.md  BlutvAuthentication_sdk.gemspec  BlutvAuthentication_sdk.rb  BlutvAuthentication_types.rb  CLAUDE.md  README.md  REFERENCE.md  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  package-lock.json  package.json
(+397 files in other folders)
